<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity"
	    android:id="@+id/RelLayout" >
	
	    
	    
	    <TextView
	        android:id="@+id/weight"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/weight" />
	    
	    <EditText
	        android:id="@+id/wText"
	        android:layout_below="@id/weight"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/wText"/>
	    
	    <TextView
	        android:id="@+id/glasses"
	        android:layout_below="@id/wText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/glasses" />
	    <LinearLayout
	        android:id="@+id/LinearLayout"
	        android:layout_below="@id/glasses"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	   		android:scrollbars ="vertical"
	        android:orientation="vertical">
		    <LinearLayout
		        android:id="@+id/horizontalLayout"
		        android:orientation="horizontal"
		        android:layout_height="wrap_content"
	        	android:layout_width="match_parent">
		        
			    <EditText
			        android:id="@+id/gText"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="@string/gText"/>
			    <Spinner
			        android:id="@+id/beers"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:entries="@array/beers"
			        android:prompt="@string/choose_beer"
			        />
			    
		    </LinearLayout>
		    
	    </LinearLayout>
	    
	    
	    
	    <Button 
		        android:id="@+id/btnAdd"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:layout_below="@id/LinearLayout"
		        android:text="@string/add_button"/>
	    
	    <Button
	        android:id="@+id/btnRemove"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_below="@id/btnAdd"
	        android:text="@string/remove_button"/>
	    
	    <TextView
	        android:id="@+id/hours"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/btnRemove"
	        android:text="@string/hours" />
	    
	    <EditText
	        android:id="@+id/hText"
	        android:layout_below="@id/hours"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hText"/>
	    
	    <RadioGroup 
	        android:id="@+id/maleFemale"
	        android:layout_below="@id/hText"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content">
	        
	         <RadioButton
	        	android:id="@+id/radioButtonMale"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:checked="true"
	        	android:text="@string/male" />
	    
	    	<RadioButton
	       		android:id="@+id/radioButtonFemale"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/female" />
	    
	        
	    </RadioGroup>
	    
	   
	    <Button
	        android:id="@+id/buttonCalculate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/maleFemale"
	        android:text="@string/button_send" />
	
	
	</RelativeLayout>
</ScrollView>