<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/promille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/warningsignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/promille"
        android:text="@string/signal"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnRecal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/promille"
        android:text="@string/button_recal" />

    <TextView
        android:id="@+id/Warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/warning"
        android:textSize="12sp" />

</RelativeLayout>